<resources>
    <string name="app_name">Movie Apps</string>
    <string name="movie">movie</string>
    <string name="tv_show">tv show</string>
    <string name="fill_duration">%1$s Minute</string>
    <string name="fill_tagline">- %1$s</string>
    <string name="fill_remove_action">%1$s removed from favorite</string>
    <string name="title_movie_tv_show">Title Movie/Tv Show</string>
    <string name="rating">Rating</string>
    <string name="image_detail_poster">image detail poster</string>
    <string name="button_share">button share</string>
    <string name="description">Description :</string>
    <string name="release_date">Release Date :</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_tv_show">Tv Show</string>
    <string name="menu_favorite">Favorite</string>
    <string name="state_favorite">state favorite</string>
    <string name="title_favorite">Favorite</string>
    <string name="language">Language</string>
    <string name="basic">Basic</string>
    <string name="state_setting">state setting</string>
    <string name="title_bar_pop_movie">Popular Movie</string>
    <string name="title_bar_pop_tv">Popular Tv Show</string>
    <string name="title_bar_fav">Favorite List</string>
    <string name="title_bar_setting">Setting</string>
    <string name="data_empty">Data is empty</string>
    <string name="no_favorite_movie">No Favorite Movie</string>
    <string name="no_favorite_tv">No Favorite Tv Show</string>

</resources>