<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.luthfirrohman.movieapps.movie.MovieFragment"
        android:label="@string/title_bar_pop_movie"
        tools:layout="@layout/fragment_movie" />
    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.luthfirrohman.movieapps.tvshow.TvShowFragment"
        android:label="@string/title_bar_pop_tv"
        tools:layout="@layout/fragment_tv_show" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.luthfirrohman.movieapps.favorite.favorite.FavoriteFragment"
        android:label="@string/title_bar_fav"
        tools:layout="@layout/fragment_favorite" />
</navigation>