<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.SettingActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@drawable/bg_topbar_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_title_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/basic"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_outline"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="textStart"
        android:text="@string/language"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_language"
        app:layout_constraintStart_toStartOf="@+id/tv_title_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_setting" />
</androidx.constraintlayout.widget.ConstraintLayout>