<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progressbar_detail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="visible"
        android:layout_gravity="center"/>
    
    <ScrollView
        android:id="@+id/layout_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#26265C"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_detail_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title_movie_tv_show" />

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                tools:text="@string/rating"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="@+id/tv_duration"
                app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

            <ImageView
                android:id="@+id/img_detail_poster"
                android:layout_width="110dp"
                android:layout_height="160dp"
                android:layout_margin="20dp"
                android:background="#006E6E6E"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_detail_poster" />

            <TextView
                android:id="@+id/tv_title_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_title_release"
                app:layout_constraintTop_toBottomOf="@+id/tv_release" />

            <TextView
                android:id="@+id/tv_title_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/release_date"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/img_detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/img_detail_poster" />

            <TextView
                android:id="@+id/tv_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_light"
                android:maxLines="2"
                android:layout_marginEnd="16dp"
                tools:text="- Tagline "
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                tools:text="0 minute "
                android:textColor="@color/white"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_timer"
                app:layout_constraintStart_toStartOf="@+id/tv_tagline"
                app:layout_constraintTop_toBottomOf="@+id/tv_tagline" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                tools:text="YYY-MM-DD"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_title_release"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_release" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins"
                tools:text="In a time when monsters walk the Earth, ..."
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title_desc"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_desc" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/img_detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="#424242"
            android:contentDescription="@string/image_detail_poster" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/button_share"
        app:backgroundTint="@color/bg_primary"
        app:fabCustomSize="70dp"
        app:srcCompat="@drawable/ic_share"
        app:tint="@color/white"
        tools:ignore="RtlHardcoded" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>